package com.directi.training.isp.exercise;

public interface IProximity {
    public void proximityCallback();
}
