package com.directi.training.isp.exercise;

public interface ITimeout {
    public void timeOutCallback();
}
